# server

./: docker-compose.yml
django/: .gitignore  Dockerfile  README.md  pyproject.toml  udo ufw allow 8080
django/config/: settings.py  urls.py
django/watchedlectures/: apps.py
nginx/: Dockerfile  nginx.conf
